// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CModalFooter customize 1`] = `
<div>
  <div
    class="modal-footer bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CModalFooter component 1`] = `
<div>
  <div
    class="modal-footer"
  >
    Test
  </div>
</div>
`;
